k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: match3
  template:
    metadata:
      labels:
        app: match3
    spec:
      containers:
        - name: match3
          image: 630596767614.dkr.ecr.us-east-1.amazonaws.com/match3-game:latest
          ports:
            - containerPort: 80
