k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match3-service
spec:
  type: NodePort
  selector:
    app: match3
  ports:
    - port: 80
      targetPort: 80
